--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus explicabo nihil minima atque consectetur maxime cumque, sunt adipisci corporis et. Error magni molestias commodi adipisci vero expedita repudiandae praesentium perspiciatis?  
             </p>
-           <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+           <h3>$234</h3> <button class="button"> BUY NOW</button>
         </div>
     </section>
     <section>
@@ -65,7 +65,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
             <div class="card-footer">
-             <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+             <h3>$234</h3> <button class="button"> BUY NOW</button>
             </div>
           </div>
           <div class="card shadow">
@@ -75,7 +75,7 @@
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
             <div class="card-footer">
-             <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+             <h3>$234</h3> <button class="button"> BUY NOW</button>
             </div>
           </div>
           <div class="card shadow">
@@ -85,7 +85,7 @@
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
-             <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+             <h3>$234</h3> <button class="button"> BUY NOW</button>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               </div>
               <div class="card-footer">
-               <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+               <h3>$234</h3> <button class="button"> BUY NOW</button>
               </div>
             </div>
             <div class="card shadow">
@@ -111,7 +111,7 @@
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               </div>
               <div class="card-footer">
-               <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+               <h3>$234</h3> <button class="button"> BUY NOW</button>
               </div>
             </div>
             <div class="card larger shadow">
@@ -121,14 +121,14 @@
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
               </div>
               <div class="card-footer">
-               <h3>$234</h3> <button class="btn btn-info"> BUY NOW</button>
+               <h3>$234</h3> <button class="button"> BUY NOW</button>
               </div>
             </div>
           </div>
         </section>
       </section>
     <section>
-      <div class="half">
+      <div class= "half">
         <div class="card border-primary mb-3" style="max-width: 18rem;">
           <div class="card-header"><img src="Logo, Icon/image 12.png" alt=""></div>
           <div class="card-body text-primary">
